# api-tester

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/integrations/: __init__.py
app/integrations/litify/: schemas.py
app/integrations/litify_czar/: schemas.py
app/integrations/oauth/: schemas.py
app/integrations/weitz/: schemas.py
app/routers/: __init__.py  awko.py  bridify.py  litify.py  litify_czar.py  napoli.py  saddle.py  smart_case_works.py  weitz.py
scripts/: python_clean.sh  start_with_ngrok.sh
tests/: test_basic.py
